--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,135 @@
     margin-bottom: 20px;
     margin-right: 20px;
 }
+
+
+
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+.filter-section {
+  max-width: 300px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 15px;
+}
+
+.filter-title {
+  font-weight: bold;
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: #333;
+}
+
+.custom-dropdown {
+  margin-bottom: 15px;
+}
+
+.custom-dropdown-toggle {
+  display: block;
+  width: 100%;
+  text-align: left;
+  color: #333;
+  font-size: 18px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 0;
+  background-color: #fff;
+}
+
+.custom-dropdown-menu {
+  display: none;
+  padding: 10px;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  background-color: #fff;
+  position: relative;
+  z-index: 1000;
+}
+
+.custom-dropdown.open .custom-dropdown-menu {
+  display: block;
+}
+
+.custom-dropdown-menu label {
+  font-size: 14px;
+  color: #555;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.custom-checkbox {
+  margin-right: 10px;
+}
+
+/* Disabled items styling */
+.custom-dropdown-menu label input:disabled + span {
+  color: #aaa;
+}
+.carka {
+  opacity: 1;
+  margin: 0;
+}
+
+
+
+.karta {
+  background-color: rgb(241, 241, 241);
+  color: rgb(0, 0, 0);
+  padding: 20px;
+  border-radius: 20px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  margin-top: 50px;
+}
+
+.karta img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.karta h5 {
+  font-weight: bold;
+  margin: 10px 0;
+  font-size: 18px;
+}
+
+.karta .barvy {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+.odkaz {
+  font-weight: 1000;
+}
+.karta .barvy div {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.karta .barvy .color-white {
+  background-color: white;
+}
+
+.karta .color-black {
+  background-color: black;
+}
+
+.karta p {
+  font-size: 14px;
+  color: #000000;
+}
+.rada {
+  margin-top: 20px;
+}
